# verifip-python

./: README.md  pyproject.toml
examples/: basic_check.py  batch_check.py  error_handling.py
src/verifip/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
