[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifip"
version = "0.1.3"
description = "Official Python SDK for the VerifIP IP fraud scoring API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ip", "fraud", "security", "vpn", "tor", "proxy"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/verifip"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
strict = true
